# FAST_LIO_LOCALIZATION_in_LivoxHapTx

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: avia.yaml  hap_tx.yaml
launch/: localization_avia.launch  localization_hap_tx.launch
path_evaluation/: compare_trajectories.py  evaluation.py  extract_localization.py  extract_odometry.py  localization.tum  localization_trajectory.csv  odometry.tum  odometry_trajectory.csv
path_evaluation/evo_results/: Localization.tum  Odometry.tum
scripts/: global_localization.py
